plugins {
    id 'org.springframework.boot' version '3.2.5' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
    id 'java'
    id 'com.diffplug.spotless' version '6.25.0' apply false
}

allprojects {
    group = 'com.conductor'
    version = '1.0.0'

    repositories {
        mavenCentral()
    }

    tasks.register('resolveAndLockAll') {
        doLast {
            configurations.configureEach {
                if (canBeResolved) {
                    resolve()
                }
            }
        }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'checkstyle'
    apply plugin: 'com.diffplug.spotless'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    ext['testcontainers.version'] = '1.20.4'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.5"
        }
    }

    dependencyLocking {
        lockAllConfigurations()
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.30'
        annotationProcessor 'org.projectlombok:lombok:1.18.30'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'com.tngtech.archunit:archunit-junit5:1.2.1'

        // Quality and Integration Testing tools
        testImplementation 'org.testcontainers:testcontainers'
        testImplementation 'org.testcontainers:junit-jupiter'
        testImplementation 'org.springframework.security:spring-security-test'
    }

    test {
        useJUnitPlatform()
        jvmArgs("-XX:+EnableDynamicAgentLoading")
        if (System.getProperty("os.name").toLowerCase().contains("windows")) {
            environment "DOCKER_HOST", "npipe:////./pipe/docker_engine"
        } else {
            environment "DOCKER_API_VERSION", "1.44"
        }
    }

    spotless {
        java {
            googleJavaFormat('1.17.0')
            removeUnusedImports()
            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    checkstyle {
        toolVersion = '10.12.5'
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
        ignoreFailures = false
        showViolations = true
    }
}
